# pypaf

./: .pylintrc  README.md  pyproject.toml
src/paf/: address.py  attribute.py  lineable.py  thoroughfare_locality.py  version.py
src/paf/premises/: __init__.py  attribute.py  building_type.py  common.py  exception.py  extender.py  lineable.py  premisable.py  premises.py  rule010.py  rule110.py  rule111.py  split.py
tests/: test_empty.py  test_exception_i.py  test_exception_ii.py  test_exception_iii.py  test_exception_iv.py  test_immutability.py  test_kwargs.py  test_mainfile.py  test_po_box.py  test_premises.py  test_rule_1.py  test_rule_2.py  test_rule_3.py  test_rule_4.py  test_rule_5.py  test_rule_6.py  test_rule_7.py  test_rule_x.py
