[project]
name = "PyPaf"
dynamic = ["version"]
authors = [
  { name="John Bard", email="johnbard@globalnet.co.uk" },
]
description = "Formats the elements of a Royal Mail Postcode Address File entry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = { text = "MIT", files = ["LICEN[CS]E*"] }

[project.urls]
Homepage = "https://github.com/drabjay/pypaf"
Repository = "https://github.com/drabjay/pypaf.git"
Issues = "https://github.com/drabjay/paf/issues"

[project.optional-dependencies]
dev = [
  "pylint",
  "pytest",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "paf.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"] 

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append("src")'
generated-members = 'premises'
